hit on inactive ProgressMeter is a no-op SERVER-1963